# github-profile

./: .gitignore  DEPLOYMENT_ARCHITECTURE.md  README.md  buildspec.yml
.codebuild/: auth.yml  profile.yml  todo.yml
.github/actions/load-deployment-config/: action.yml
.github/scripts/: cleanup-pr-environment.sh  cleanup-production-artifacts.sh  prepare-production-candidates.sh  prepare-production-rollback.sh  run-codebuild-batch.sh  validate-bootstrap.sh
.github/workflows/: cleanup-production-artifacts.yml  deploy-environment.yml  deploy-production-frontend.yml  deploy-production-observability.yml  pr-environment.yml  pr-guard.yml  prepare-production-candidate.yml  prepare-production-rollback.yml
app/: .env.example  compose.yaml
app/auth-service/: Cargo.toml  Dockerfile  README.md
app/auth-service/migrations/: 000001_create_auth_tables.sql
app/auth-service/src/: config.rs  error.rs  main.rs  model.rs  repository.rs  routes.rs  security.rs
app/backend/: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
app/backend/migrations/: 20260711000001_create_github_users.down.sql  20260711000001_create_github_users.up.sql  20260715000002_add_github_user_owner.down.sql  20260715000002_add_github_user_owner.up.sql
app/backend/src/: config.rs  main.rs  state.rs
app/backend/src/api/: router.rs  users.rs
app/backend/src/application/: user_service.rs
app/backend/src/domain/: user.rs
app/backend/src/errors/: app_error.rs  http_error.rs  infra_error.rs  mod.rs
app/backend/src/grpc/: mod.rs  profile.rs
app/backend/src/infrastructure/: auth.rs  crypto.rs  db.rs  github.rs  mod.rs  user_repository.rs
app/contracts/profile/v1/: profile.proto
app/frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts  wrangler.toml
app/frontend/public/: _redirects
app/frontend/src/: App.tsx
app/frontend/src/api/: auth.ts  client.ts  services.ts  (+2 more)
app/todo-service/: .dockerignore  Dockerfile  README.md  go.mod  go.sum
app/todo-service/scripts/: generate-proto.sh
infra/: pr-environment.yaml  production-observability.yaml
(+45 files in other folders)
