[package]
name = "github-profile-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
aws-config = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-sdk-kms = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
jsonwebtoken = "9"
rand = "0.8"
rsa = { version = "0.9", features = ["pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
