[package]
name = "github-profile-api"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
axum = "0.8.9"
base64 = "0.22"
chrono = { version = "0.4.45", features = ["serde"] }
hex = "0.4"
lambda_http = "1.3.0"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.7.0", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }

# Lambda 部署产物优化（cargo lambda build --release）
[profile.release]
lto = true
codegen-units = 1
strip = true
